# game-of-life-wasm

./: Cargo.toml  README.md  index.html  seed.txt
src/: lib.rs  main.rs
