[package]
name = "game-of-life"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = ["console"] }
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["wee_alloc"]
wee_alloc = ["wee_alloc/size_classes"]