[package]
name = "game-of-life"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.20"
rand = "0.8.5"
wasm-bindgen = "0.2.89"
wasm-logger = "0.2.0"
wasm-timer = "0.2.5"
web-sys = { version = "0.3.66", features = ["console"] }
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.getrandom]
version = "0.2.3"
features = ["js"]

[features]
default = ["wee_alloc"]
wee_alloc = ["wee_alloc/size_classes"]
